[package]
name = "starboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[workspace.dependencies]
eframe = { git = "https://github.com/emilk/egui", features = ["persistence"] }
egui = { git = "https://github.com/emilk/egui", features = ["persistence"] }
serde = { version = "1.0.145", features = ["derive"] }

[dependencies]
eframe.workspace = true
egui.workspace = true
serde.workspace = true
